--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.0
+  geolocator: ^10.1.0
+  mobile_scanner: 3.5.0
+  nfc_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
